--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "build/cjs/index.js",
     "module": "build/esm/index.mjs",
-    "types": "build/tyeps/index.d.ts",
+    "types": "build/types/index.d.ts",
     "exports": {
         "./package.json": "./package/json",
         ".": {
